# dbt-multi-adapter-utils

./: .dbt-multi-adapter.yml.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
example_project/: .dbt-multi-adapter.yml  README.md  dbt_project.yml  demo.sh  profiles.yml
example_project/models/: order_items_rollup.sql  product_tags.sql  schema.yml  user_activity_summary.sql
example_project/seeds/: raw_order_items.csv  raw_product_tags.csv  raw_user_activities.csv
integration_tests/: test_integration_dbt.py
src/dbt_multi_adapter_utils/: cli.py  config.py  jinja_parser.py  macro_generator.py  model_rewriter.py  scanner.py  sqlglot_adapter.py
tests/: test_cli.py  test_config.py  test_function_detection.py  test_jinja_parser.py  test_macro_generator.py  test_model_rewriter.py  test_scanner.py  test_sqlglot_adapter.py  test_workflow.py
tests/fixtures/complete_dbt_project/: dbt_project.yml
tests/fixtures/complete_dbt_project/macros/: portable_functions.sql
tests/fixtures/complete_dbt_project/models/: already_portable.sql  simple.sql  with_control_flow.sql  with_refs.sql
tests/fixtures/dbt_models/: array_aggregation.sql  date_functions.sql  mixed_functions.sql  simple_aggregation.sql  with_jinja.sql
tests/fixtures/sample_dbt_project/: .dbt-multi-adapter.yml
tests/fixtures/sample_dbt_project/models/: example.sql
